# gcf-core-rust

./: .gitignore  ARCHITECTURE_ISSUES.md  BITARRAY_BITVEC_MIGRATION_PLAN.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  INTERACTIVE_NETWORK_EDITOR_PLAN.md  LAZY_COPYING_DESIGN.md  NETWORK_ARCHITECTURE_PROPOSAL.md  NETWORK_IMPLEMENTATION_SUMMARY.md  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  README.md  RUST_CONVERSION_PLAN.md  WASM_IMPLEMENTATION_STATUS.md  WASM_LIVE_VIEWER_COMPLETE.md  WASM_SETUP.md  build_wasm.sh
.claude/: settings.local.json
.claude/agents/: rust-pro.md
.claude/reports/: ARCHITECTURE_ISSUES.md  BITARRAY_BITVEC_MIGRATION_COMPLETE.md  BITARRAY_BITVEC_MIGRATION_PLAN.md  BITARRAY_BITVEC_VALIDATION_REPORT.md  BLOCKOUTPUT_CHANGE_DETECTION_OPTIONS.md  LAZY_COPYING_DESIGN.md  NETWORK_CONNECTION_API_IMPLEMENTATION_REPORT.md  NETWORK_CONNECTION_API_PLAN.md  NETWORK_IMPLEMENTATION_SUMMARY.md  NETWORK_SERIALIZATION_IMPLEMENTATION.md  PARALLEL_EXECUTION_SCALABILITY.md  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_3_INTEGRATION_TEST_REPORT.md  PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_5_SUMMARY.md  RUST_CONVERSION_PLAN.md  SCALABILITY_ANALYSIS.md  VERSION_BASED_CHANGE_DETECTION_IMPLEMENTATION.md  VISUALIZATION_ENHANCEMENT_PLAN.md  WASM_LIVE_VIEWER_COMPLETE.md  WASM_QUICKSTART.md  WASM_VISUALIZATION_GUIDE.md
benches/: bitarray_bench.rs  bitarray_comparison.rs  bitfield_bench.rs  block_bench.rs  memory_test.rs  network_scalability_bench.rs  quick_bench.rs  sequence_learner_scalability_bench.rs  utils_bench.rs
examples/: code.rs  compare_methods.rs  complex_network_visualization.rs  debug_seq_init.rs  detailed_trace.rs  diagnose2.rs  diagnose_context_learner.rs  diagnose_dendrites.rs  diagnose_simple.rs  measure_memory.rs  measure_memory_sequence.rs  network_save_load.rs  network_save_load_trained.rs  network_sequence_learner.rs  network_visualization.rs  online_learning_scalar_sequence_anomalies.rs  quick_bench.rs  test_actual_scenario.rs  test_discrete.rs  test_encoder_change.rs  test_output_step.rs  trace_learning.rs  trace_receptors.rs
examples/claude/: compare_methods.rs  diagnose2.rs  diagnose_simple.rs  test_actual_scenario.rs  trace_learning.rs
src/: README.md  bitarray.rs  bitarray_bitvec.rs  bitfield.rs  block.rs  block_base.rs  block_input.rs  block_memory.rs  block_output.rs  execution_recorder.rs  lib.rs  network.rs  network_config.rs  utils.rs  wasm_interface.rs
src/blocks/: context_learner.rs  discrete_transformer.rs  mod.rs  pattern_classifier.rs  pattern_pooler.rs  persistence_transformer.rs  scalar_transformer.rs  sequence_learner.rs
src/cpp/: bitarray.cpp  bitarray.hpp  block.cpp  block.hpp  block_input.cpp  block_input.hpp  block_memory.cpp  block_memory.hpp  block_output.cpp  block_output.hpp  utils.hpp
src/cpp/blocks/: _template.cpp  _template.hpp  blank_block.cpp  blank_block.hpp  context_learner.cpp  context_learner.hpp  discrete_transformer.cpp  discrete_transformer.hpp  pattern_classifier.cpp  pattern_classifier.hpp  pattern_classifier_dynamic.cpp  pattern_classifier_dynamic.hpp  pattern_pooler.cpp  pattern_pooler.hpp  persistence_transformer.cpp  persistence_transformer.hpp  scalar_transformer.cpp  scalar_transformer.hpp  sequence_learner.cpp  sequence_learner.hpp
src/rust/: README.md  bitarray.rs  block.rs  block_base.rs  block_input.rs  block_memory.rs  block_output.rs  error.rs  lib.rs
src/rust/blocks/: context_learner.rs  discrete_transformer.rs  mod.rs  pattern_classifier.rs  pattern_pooler.rs  persistence_transformer.rs  scalar_transformer.rs  sequence_learner.rs
tests/: test_bitarray.proptest-regressions  test_bitfield.rs  test_block_integration.rs  test_context_learner.rs  test_context_learner_simple.rs  test_discrete_transformer.rs  test_execution_recorder.rs  test_learning_integration.rs  test_network.rs  test_pattern_classifier.rs  test_pattern_pooler.rs  test_persistence_transformer.rs  test_scalar_transformer.rs  test_sequence_learner.rs  test_temporal_integration.rs  test_transformer_integration.rs  test_utils.rs
tests/cpp/: CMakeLists.txt  test_bitarray.cpp  test_block_input.cpp  test_block_memory.cpp  test_block_output.cpp  test_context_learner.cpp  test_discrete_transformer.cpp  test_pattern_classifier.cpp  test_pattern_classifier_dynamic.cpp  test_pattern_pooler.cpp  test_persistence_transformer.cpp  test_scalar_transformer.cpp  test_sequence_learner.cpp
tests/rust/: test_bitarray.rs  test_bitarray_bitvec.rs  test_block_integration.rs  test_context_learner.rs  test_context_learner_simple.rs  test_discrete_transformer.rs  test_learning_integration.rs  test_pattern_classifier.rs  test_pattern_pooler.rs  test_persistence_transformer.rs  test_scalar_transformer.rs  test_sequence_learner.rs  test_temporal_integration.rs  test_transformer_integration.rs
visualization/: README.md  viewer_live.html
web/: .gitignore  README.md  package.json  playwright.config.ts  test_wasm.html  tsconfig.json  viewer.html  vite.config.ts
web/src/: main.ts
web/src/core/: EditorStore.ts  HistoryManager.ts
web/src/services/: WasmNetworkService.ts
web/src/types/: domain.ts  wasm.ts
web/src/ui/renderers/: HUDRenderer.ts
web/tests/: README.md  diagnostic-wasm.spec.ts  phase3-phase4.spec.ts  phase3-phase4.spec.ts.bak  viewer.spec.ts
