[package]
name = "gnomics"
version = "1.0.0"
edition = "2021"
authors = ["Gnomics Contributors"]
description = "High-performance computational neuroscience framework for machine learning"
license = "MIT"
repository = "https://github.com/yourusername/gnomics"
readme = "README.md"
keywords = ["machine-learning", "neuroscience", "htm", "sparse-distributed-representations"]
categories = ["science", "algorithms"]

[lib]
name = "gnomics"
path = "src/lib.rs"

[dependencies]
# Random number generation
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Bitvec (for prototype comparison)
bitvec = { version = "1.0", features = ["serde"] }
itertools = "0.10.5"

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Property-based testing
proptest = "1.0"

# Floating point comparison
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[profile.bench]
inherits = "release"

[[test]]
name = "test_bitarray"
path = "tests/test_bitarray.rs"

[[test]]
name = "test_block_integration"
path = "tests/test_block_integration.rs"

[[test]]
name = "test_utils"
path = "tests/test_utils.rs"

[[test]]
name = "test_scalar_transformer"
path = "tests/test_scalar_transformer.rs"

[[test]]
name = "test_discrete_transformer"
path = "tests/test_discrete_transformer.rs"

[[test]]
name = "test_persistence_transformer"
path = "tests/test_persistence_transformer.rs"

[[test]]
name = "test_transformer_integration"
path = "tests/test_transformer_integration.rs"

[[test]]
name = "test_pattern_pooler"
path = "tests/test_pattern_pooler.rs"

[[test]]
name = "test_pattern_classifier"
path = "tests/test_pattern_classifier.rs"

[[test]]
name = "test_learning_integration"
path = "tests/test_learning_integration.rs"

[[test]]
name = "test_context_learner"
path = "tests/test_context_learner.rs"

[[test]]
name = "test_context_learner_simple"
path = "tests/test_context_learner_simple.rs"

[[test]]
name = "test_sequence_learner"
path = "tests/test_sequence_learner.rs"

[[test]]
name = "test_temporal_integration"
path = "tests/test_temporal_integration.rs"

[[bench]]
name = "bitarray_bench"
harness = false

[[bench]]
name = "memory_test"
harness = false

[[bench]]
name = "utils_bench"
harness = false

[[bench]]
name = "block_bench"
harness = false
